fixed tiny gaps between tiles

--- a/styles/projects/minesweeper.css
+++ b/styles/projects/minesweeper.css
@@ -38,8 +38,8 @@ body div p {
 
 div.row div {
     font-size: 1.3em;
-    width: calc(1.73em + 0.4px);
-    height: calc(1.73em + 0.4px);
+    width: 1.73em;
+    height: 1.73em;
     border-width: 0.15em;
     border-style: solid;
     border-color: rgba(255, 255, 255, 0.3) rgba(0, 0, 0, 0.3) rgba(0, 0, 0, 0.3) rgba(255, 255, 255, 0.3);
